[gd_scene load_steps=4 format=3 uid="uid://dcc5x1snxgepn"]

[ext_resource type="Script" uid="uid://bilmy6u5xo8fm" path="res://assets/player/player_controller.gd" id="1_8uh7m"]
[ext_resource type="Texture2D" uid="uid://ddcbx1i0bdl77" path="res://icon.svg" id="1_37kl0"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_mf4mk"]
size = Vector2(24, 68)

[node name="Node2D" type="Node2D"]

[node name="Camera2D" type="Camera2D" parent="."]

[node name="CharacterBody2D" type="CharacterBody2D" parent="." node_paths=PackedStringArray("jump_timer")]
script = ExtResource("1_8uh7m")
jump_timer = NodePath("timers/jump_timer")

[node name="Sprite2D" type="Sprite2D" parent="CharacterBody2D"]
position = Vector2(-7.1525574e-07, -11.499998)
scale = Vector2(0.265625, 0.7109375)
texture = ExtResource("1_37kl0")

[node name="CollisionShape2D" type="CollisionShape2D" parent="CharacterBody2D"]
shape = SubResource("RectangleShape2D_mf4mk")

[node name="timers" type="Node" parent="CharacterBody2D"]

[node name="jump_timer" type="Timer" parent="CharacterBody2D/timers"]
wait_time = 0.7
one_shot = true

[connection signal="timeout" from="CharacterBody2D/timers/jump_timer" to="CharacterBody2D" method="_on_jump_timer_timeout"]
